--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <li>
                 <a href="#">Products</a>
             </li>
-            <li>
-                <a href="#">Sign in</a>
-            </li>
         </ul>
+        <button>
+            sign in
+        </button>
         <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
