--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Site</title>
+    <title>Travel Site</title>
 </head>
 
 <body>
-    <nav>
-        <div class="logo">
-            <h4>NEXT</h4>
-        </div>
+    <nav class="navbar">
+
+        <a href="#" class="logo">
+            <img src="images/logo.png" alt="Logo" />
+        </a>
+
         <ul class="nav-links">
             <li>
                 <a href="#">Home</a>
@@ -25,9 +27,9 @@
                 <a href="#">Products</a>
             </li>
         </ul>
-        <button>
-            sign in
-        </button>
+
+        <button class="sign-in">sign in</button>
+
         <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -35,7 +37,24 @@
         </div>
     </nav>
 
+    <home class="home">
+        <img src="images/large-profile.jpg" style="height:600px; margin:100px; float: left;"
+            alt="A pretend invisible person wearing a hat, glasses, and coat.">
+        <div style="height:600px; margin:100px;">
+            <h1>Hello </h1>
+            <p style="line-height: 2.0; font-size:20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et magnis dis parturient montes
+                nascetur ridiculus mus. Purus semper eget duis at tellus at urna condimentum mattis. Turpis in eu mi
+                bibendum neque egestas. Rhoncus dolor purus non enim praesent elementum facilisis. Ipsum nunc aliquet
+                bibendum enim facilisis gravida. Cursus turpis sa tincidunt dui ut ornare lectus. Enim nec dui nunc
+                mattis enim ut. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. Tussa
+                ultricies mi quis hendrerit dolor magna. Elit eget gravida cum sociis natoque penatibus et magnis
+                dis. Enim tortor at auctor urna nunc id cursus metus.</p>
+        </div>
+    </home>
+
     <script src="app.js"></script>
+
 </body>
 
 </html>
